# hypergraph-bayesian-reconstruction

./: .gitignore  .gitmodules  README.md  compute_metrics.py  confusion_matrix_dataset.py  diagnose_convergence.py  dump_hypergraph_to_csv.py  generate_data.py  sample.py  tendency_fixed_hypergraph.py
_pygrit/: CMakeLists.txt  README.md  pyproject.toml  setup.py
_pygrit/include/GRIT/: gibbs_sampler.hpp  metropolis-hastings.hpp  utility.h
_pygrit/include/GRIT/hypergraph-models/: edgestrength.h
_pygrit/include/GRIT/inference-models/: base_model.h  per.h  pes.h  phg.h
_pygrit/include/GRIT/observations-models/: poisson_hypergraph.h
_pygrit/include/GRIT/parameters-samplers/: poisson_edgestrength.h  poisson_independent_hyperedges.h
_pygrit/include/GRIT/priors/: poisson_independent_edges.h
_pygrit/include/GRIT/proposers/: sixsteps_hypergraph.h
_pygrit/include/GRIT/proposers/edge-choosers/: weighted_unique_chooser.h
_pygrit/include/GRIT/proposers/triangle-choosers/: chooser_base.h
_pygrit/pygrit/: __init__.py
_pygrit/python_wrapper/: additional_utility.cpp  data_structures.cpp  models.cpp  pybind_main.cpp
_pygrit/src/: generator.cpp  trianglelist.cpp
_pygrit/src/hypergraph-models/: edgestrength.cpp  gilbert.cpp
_pygrit/src/observations-models/: poisson_edgestrength.cpp
_pygrit/src/proposers/triangle-choosers/: observations_by_pair_chooser.cpp
_pygrit/tests/: CMakeLists.txt  check_distribution_samplers.py
_pygrit/tests/models/: CMakeLists.txt
_pygrit/tests/proposers/: CMakeLists.txt  edgechoosers.cpp  graph_proposers.cpp  trianglechoosers.cpp
config/: default.json
config/graph-data/: crimes.json  fixed_best.json  fixed_beta.json  fixed_cm.json  fixed_sbm.json  fixed_worst.json  karate.json  languages.json  plantpol.json  prostitution.json
config/synthetic/: beta.json  miller-cm.json  nocycles.json  onlycycles.json  sbm-ti-ei.json
datasets/: produce_hyperedge_lists.py
datasets/bipartite_graphs/: crimes.csv  languages.csv  plantpol.csv  prostitution.csv
datasets/hypergraphs/: best-case.csv  beta.csv  cm.csv  crimes.csv  karate.txt  languages.csv  plantpol.csv  prostitution.csv  sbm.csv  worst-case.csv
display_results/: chain_comparisons.py  confusion_matrix_fig.py  confusion_matrix_summary.py  diagnosis.py  gen_tendency_data.py  hypergraph_info.py  inference_metrics.py  inference_tendency.py  observations_at_map.py  observations_distribution.py  parameters_marginals.py  plot_setup.py  plot_tendency_data.py  priors_plot.py
display_results/hypergraph_figures/: average_hypergraph.py  average_structure.py  drawing.py  ground_truth.py  karate.pos  map_comparison.py  sample_animation.py
figures/: README.md
generation/: hypergraph_generation.py  observations_generation.py
grit/: CMakeLists.txt  README.md  setup.py
grit/include/GRIT/: gibbs_base.h  hypergraph.h  trianglelist.h  utility.h
grit/include/GRIT/hypergraph-models/: gilbert.h  independent_triangles.h
grit/include/GRIT/inference-models/: model_likelihood.hpp  per.h  pes.h  phg.h
grit/include/GRIT/observations-models/: poisson_edgestrength.h
grit/include/GRIT/priors/: poisson_independent_hyperedges.h
grit/include/GRIT/proposers/: movetypes.h  twosteps_triangle.h
grit/include/GRIT/proposers/edge-choosers/: uniform_edge_chooser.h  weighted_chooser.h
grit/include/GRIT/proposers/triangle-choosers/: observations_by_pairs_chooser.h  random_chooser.h  triplet_three_steps.h  triplet_weighted.h
grit/python_wrapper/: additional_utility.hpp  hypergraph_generation.cpp  hypergraph_generation.hpp  metrics.cpp  metrics.hpp  observations_generation.cpp  observations_generation.hpp  pybind_main.cpp
grit/src/: hypergraph.cpp  utility.cpp
grit/src/hypergraph-models/: independent_hyperedges.cpp
grit/src/inference-models/: per.cpp  phg.cpp
grit/src/observations-models/: poisson_edgestrength.cpp  poisson_hypergraph.cpp
grit/src/parameters-samplers/: poisson_edgestrength.cpp  poisson_gilbert.cpp  poisson_independent_hyperedges.cpp
grit/src/proposers/: twosteps_triangle.cpp
grit/src/proposers/edge-choosers/: sep-weighted_unique_chooser.cpp  uniform_edge_chooser.cpp  weighted_two-layers_chooser.cpp  weighted_unique_chooser.cpp
grit/src/proposers/triangle-choosers/: triplet_three_steps.cpp  triplet_weighted.cpp
grit/tests/: check_distribution_samplers.py
grit/tests/models/: hypergraphs.cpp  observations.cpp
grit/tests/proposers/: CMakeLists.txt  proposers.cpp  trianglechoosers.cpp
make_figures/: diagnosis.py  get_confusion_matrix_summary.py  hypergraph_info.py  inference_metrics.py  inference_tendency.py  plot_setup.py
make_figures/hypergraph_figures/: average_hypergraph.py  ground_truth.py  sample_animation.py
modeling/: config.py  metrics.py  models.py  output.py
modelling/: likelihood_function.pyx  models.py
pygrit/: setup.py
pygrit/include/GRIT/: gibbs_sampler.hpp  hypergraph.h  metropolis-hastings.hpp
pygrit/include/GRIT/hypergraph-models/: independent_hyperedges.h
pygrit/include/GRIT/parameters-samplers/: poisson_gilbert.h  (+1 more)
pygrit/python_wrapper/: additional_utility.cpp  hypergraph_generation.cpp  models.cpp  pybind_main.cpp
pygrit/src/: CMakeLists.txt  gibbs_base.cpp  hypergraph.cpp  trianglelist.cpp  utility.cpp
pygrit/src/hypergraph-models/: edgestrength.cpp  gilbert.cpp  independent_triangles.cpp
pygrit/src/inference-models/: pes.cpp
pygrit/src/parameters-samplers/: poisson_independent_hyperedges_ordered.cpp
pygrit/src/proposers/: foursteps_hypergraph.cpp  sixsteps_hypergraph.cpp  twosteps_edges.cpp  twosteps_triangle.cpp
pygrit/src/proposers/edge-choosers/: sep-weighted_unique_chooser.cpp  weighted_chooser.cpp
pygrit/src/proposers/triangle-choosers/: random_chooser.cpp  uniform_triangle_chooser.cpp
pygrit/tests/: CMakeLists.txt  check_distribution_samplers.py  gibbs_base.cpp  hypergraph.cpp  trianglelist.cpp
pygrit/tests/models/: CMakeLists.txt  observations.cpp  structure.cpp
pygrit/tests/proposers/: edgechoosers.cpp  hypergraph_proposers.cpp
stan-models/: undir  undir.hpp  undir.stan
utils/: config.py
(+8 files in other folders)
