[build-system]
requires = ["scikit-build-core>=0.2.1", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pygrit"
version = "1.0.0"
description = "Python GRaph Inference of Triangles: inference framework to reconstruct the hypergraph structure of noisy observations."
readme = "README.md"
authors = [
  { name = "Simon Lizotte" },
]
requires-python = ">=3.7"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
